--- a/de/index.html
+++ b/de/index.html
@@ -3,18 +3,17 @@
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="../css/styles.css">
 
 <body>
     <div class="lang-select">
-        <div class="lang-style lang-style-active">English</div>
+        <div class="lang-style "><a href="../">English</a></div>
             <p style="color: rgb(255, 255, 255);">/</p>
-            <div class="lang-style"><a href="../de/">Deutsch</a> </div>
+            <div class="lang-style lang-style-active">Deutsch</a> </div>
             <p style="color: rgb(255, 255, 255);">/</p>
-            <div class="lang-style" style="margin-top:-2px"><a href="/ja/">日本語</a></div>
+            <div class="lang-style " style="margin-top:-2px"><a href="../ja/">日本語</a></div>
 
     </div>
-
     <main>
 
 
