--- a/ja/index.html
+++ b/ja/index.html
@@ -3,18 +3,18 @@
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/styles.css">
+<link href="https://fonts.googleapis.com/css?family=Assistant:400,200,300,700" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="/css/styles.css">
 
 <body>
     <div class="lang-select">
-        <div class="lang-style lang-style-active">English</div>
+        <div class="lang-style "><a href="../">English</a></div>
             <p style="color: rgb(255, 255, 255);">/</p>
             <div class="lang-style"><a href="../de/">Deutsch</a> </div>
             <p style="color: rgb(255, 255, 255);">/</p>
-            <div class="lang-style" style="margin-top:-2px"><a href="/ja/">日本語</a></div>
+            <div class="lang-style lang-style-active" style="margin-top:-2px">日本語</div>
 
     </div>
-
     <main>
 
 
@@ -23,7 +23,7 @@
             <p>In World War II, Japan produced an estimated amount of 9000 tons of chemical weapons in the poison gas
                 factory on Ōkunoshima. Today it‘s globally known as rabbit island: Around 700 free hopping rabbits
                 attract hundreds of thousands of tourists.</p>
-            <p> <b> The documentary „Ōkunoshima“ shows what‘s left of the poison gas – and that it‘s still </b></p>
+            <h3> The documentary „Ōkunoshima“ shows what‘s left of the poison gas – and that it‘s still </h3>
         </section>
         <section>
             <style>
