--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/css?family=Assistant:400,200,300,700" rel="stylesheet" type="text/css">
+
 <link rel="stylesheet" href="css/styles.css">
 
 <body>
@@ -23,8 +25,8 @@
             <p>In World War II, Japan produced an estimated amount of 9000 tons of chemical weapons in the poison gas
                 factory on Ōkunoshima. Today it‘s globally known as rabbit island: Around 700 free hopping rabbits
                 attract hundreds of thousands of tourists.</p>
-            <p> <b> The documentary „Ōkunoshima“ shows what‘s left of the poison gas – and that it‘s still </b></p>
-        </section>
+                <h3> The documentary „Ōkunoshima“ shows what‘s left of the poison gas – and that it‘s still </h3>
+            </section>
         <section>
             <style>
                 .embed-container {
