--- a/de/index.html
+++ b/de/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+
+<!--Deutsch-->
+
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,22 +13,27 @@
 <body>
     <div class="lang-select">
         <div class="lang-style "><a href="../">English</a></div>
-            <p style="color: rgb(255, 255, 255);">/</p>
-            <div class="lang-style lang-style-active">Deutsch</a> </div>
-            <p style="color: rgb(255, 255, 255);">/</p>
-            <div class="lang-style " style="margin-top:-2px"><a href="../ja/">日本語</a></div>
+        <p style="color: rgb(255, 255, 255);">/</p>
+        <div class="lang-style lang-style-active">Deutsch</a> </div>
+        <p style="color: rgb(255, 255, 255);">/</p>
+        <div class="lang-style " style="margin-top:-2px"><a href="../ja/">日本語</a></div>
 
     </div>
     <main>
 
 
         <section>
-            <h1>Ōkunoshima – Japan‘s Poison Factory</h1>
-            <p>In World War II, Japan produced an estimated amount of 9000 tons of chemical weapons in the poison gas
-                factory on Ōkunoshima. Today it‘s globally known as rabbit island: Around 700 free hopping rabbits
-                attract hundreds of thousands of tourists.</p>
-                <h3> The documentary „Ōkunoshima“ shows what‘s left of the poison gas – and that it‘s still </h3>
-            </section>
+            <h1>Ōkunoshima – Japans Giftgasfabrik</h1>
+            <p>
+                Im Zweiten Weltkrieg produzierte Japan auf der Insel Ōkunoshima schätzungsweise 9000 Tonnen
+                chemische Kampfstoffe. Heute ist sie weltweit als Haseninsel bekannt: Rund 700 freilaufende Kaninchen
+                locken Hunderttausende von Touristen an.
+            </p>
+            <h4>
+                Der Dokumentarfilm "Ōkunoshima" zeigt, was von dem Giftgas geblieben ist
+                – und dass es immer noch gefährlich ist.
+            </h4>
+        </section>
         <section>
             <style>
                 .embed-container {
@@ -36,40 +44,48 @@
                     max-width: 100%;
                 }
 
-                .embed-container iframe,
-                .embed-container object,
-                .embed-container embed {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                }
+                    .embed-container iframe,
+                    .embed-container object,
+                    .embed-container embed {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                    }
             </style>
-            <div class='embed-container'><iframe src='https://player.vimeo.com/video/433970242' frameborder='0'
-                    webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+            <div class='embed-container'>
+                <iframe src='https://vimeo.com/383357553' frameborder='0'
+                        webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            </div>
         </section>
         <section>
             <div>
-                <h3>About the documentary „Ōkunoshima“</h3>
-                <p>The 30 minute documentary film was independently researched and produced between 2013 and 2019. It
-                    combined unpublished documents, interviews with victims & historical witnesses, as well as unseen
-                    images from various archives from around the world. The documentary had its world premiere at the
-                    Hiroshima International Film Festival in 2019 and was nominated in the category “Investigative
-                    Medium” for the 2020 DIG Awards.</p>
+                <h3>Die Dokumentation "Ōkunoshima"</h3>
+                <p>
+                    Der 30-minütige Dokumentarfilm wurde zwischen 2013 und 2019 recherchiert
+                    und unabhängig produziert. Er kombiniert unveröffentlichte Dokumente,
+                    Interviews mit Opfern und Zeitzeugen, sowie ungesehene Bilder aus historischen Archiven.
+                    "Ōkunoshima" hatte seine Weltpremiere auf dem Hiroshima International Film Festival 2019
+                    und wurde in der Kategorie "Investigatives Medium" für die DIG Awards 2020 nominiert.
+                </p>
             </div>
 
             <div>
-                <h3>About the filmmaker Fritz Schumann</h3>
-                <p>I‘m a visual journalist working in Japan since 2009. In 2013, when I was living in Hiroshima, I
-                    started to research the history of Ōkunoshima beyond the rabbit island fame. I was shocked by the
-                    extent of the production and how unknown the poison gas history was even inside Japan. Besides a
-                    research grant, this film was funded by myself. It was challenging to find sources and the research
-                    took me several years – and it will stick with me for a long time. Some of the people I talked to
-                    have already passed away, it was their last chance to tell me their story. I hope this documentary
-                    film can preserve their memories for the future.</p>
-                <p>Some of the people I talked to have already passed away, it was their last chance to tell me their
-                    story. I hope this documentary film can preserve their memories for the future.</p>
+                <h3>Der Filmemacher Fritz Schumann</h3>
+                <p>
+                    Ich beschäftige mich als Visual Journalist seit 2009 mit dem Land Japan.
+                    Als ich 2013 in Hiroshima lebte, begann ich, die Geschichte von Ōkunoshima zu recherchieren,
+                    jenseits der Berühmtheit als Kanincheninsel. Das Ausmaß der Giftgasproduktion schockierte mich –
+                    aber mehr noch überraschte mich die mangelnde Aufarbeitung und wie unbekannt dieses Kapitel in Japan war.
+                    Neben einem Recherchestipendium habe ich die Arbeit an dem Film komplett selbst finanziert.
+                    Es war nicht einfach, Quellen und GesprächspartnerInnen zu finden. Die Recherche dauerte mehrere Jahre
+                    – und sie wird mich noch lange begleiten.
+                </p>
+                <p>
+                    Einige der Menschen, mit denen ich gesprochen habe, sind bereits verstorben.
+                    Es war ihre letzte Chance, ihre Geschichte zu erzählen. Ich hoffe, dieser Dokumentarfilm kann ihre Erinnerungen für die Zukunft bewahren.
+                </p>
             </div>
 
 
@@ -78,26 +94,36 @@
         <section>
             <div>
                 <h4>Credits</h4>
-                <p>Story, Research & Photography Fritz Schumann Music Mario Kaoru Mevy Animation Silan Bekjarov
-                    Interviews Masayuki Yamauchi / Susumu Sakuma / Bu Ping / Reiko Okada / Miyuki Aozuka Translation
+                <p>
+                    <strong>Story, Recherche & Fotografie</strong> Fritz Schumann <strong>Musik</strong> Mario Kaoru Mevy <strong>Animation</strong> Silan Bekjarov
+                    <strong>Interviews</strong> Masayuki Yamauchi / Susumu Sakuma / Bu Ping / Reiko Okada / Miyuki Aozuka <strong>Übersetzung</strong>
                     Yukina Gumbe Harris / Nikki Kininmoth / Tomoko Nishizaki / Noburo Kondo / Azusa Sumioka / Hidenori
-                    Suzuki Okada Diary Narration Kiyoka Sumida Additional Research Sophie Matsuo / Noburo Kondo / Tomoko
-                    Nishizaki Special Thanks Tomoko Nishizaki / Higuchi Kenji / Noburo Kondo / Noborito Museum Tokyo /
-                    Sophie Matsuo / Yuriko Williams / Justus Williams / Kei Nakamura / Daqing Yang / Kiyoka Sumida /
-                    NIDS military archives / Ayano Kawaguchi / Frank Schumann / GEKA Munster / Hiroshima Film Commission
-                    / Mihoko Inagaki Additional Funding Robert Bosch Stiftung „Grenzgänger“ grant Copyright Fritz
-                    Schumann 2013 – 2019</p>
+                    Suzuki <strong>Okada Tagebuch Sprecherin</strong> Kiyoka Sumida <strong>Zusätzliche Recherche</strong> Sophie Matsuo / Noburo Kondo / Tomoko
+                    Nishizaki <strong>Besonderen Dank</strong> Tomoko Nishizaki / Higuchi Kenji / Noburo Kondo / Noborito Museum Tokyo /
+                    Sophie Matsuo / Yuriko Williams / Justus Williams / Kei Nakamura / Daqing Yang / Kiyoka Sumida / Masami Sumida / 
+                    NIDS Militär Archiv / Ayano Kawaguchi / Frank Schumann / GEKA Munster / Hiroshima Film Commission
+                    / Mihoko Inagaki <strong>Zusätzliche Finanzierung</strong> Robert Bosch Stiftung „Grenzgänger“ Stipendium <strong>Copyright</strong> Fritz
+                    Schumann 2019
+                </p>
             </div>
         </section>
         <section>
-            <p><a href="https://www.fotografritz.de/" target="_blank">More documentary films by Fritz Schumann</a></p>
-            <p><a href="mailto:fritz@fotografritz.de">Contact</a>
-            <p>Imprint </p>
+            <p><a href="https://www.fotografritz.de/" target="_blank">Weitere Dokumentarfilme von Fritz Schumann</a></p>
+            <p><a href="mailto:fritz@fotografritz.de">Kontakt</a>
+            <p><a href="http://www.fotografritz.de/fritz/" target="_blank">Impressum</a></p>
 
         </section>
         <section>
-            <p>If you liked the film and want to support the work:</p>
-            <p>Paypal Button </p>
+            <p>
+                Wenn Ihnen der Film gefallen hat und Sie diese Arbeit unterstützen wollen:
+            </p>
+            <p>
+                <form action="https://www.paypal.com/donate" method="post" target="_top">
+                    <input type="hidden" name="hosted_button_id" value="JTXN3ANZCF73Y" />
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                    <img alt="" border="0" src="https://www.paypal.com/en_DE/i/scr/pixel.gif" width="1" height="1" />
+                </form>
+            </p>
         </section>
     </main>
 </body>
