--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html>
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+<!--English-->
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Assistant:400,200,300,700" rel="stylesheet" type="text/css">
-
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="/css/styles.css">
 
 <body>
     <div class="lang-select">
         <div class="lang-style lang-style-active">English</div>
-            <p style="color: rgb(255, 255, 255);">/</p>
-            <div class="lang-style"><a href="../de/">Deutsch</a> </div>
-            <p style="color: rgb(255, 255, 255);">/</p>
-            <div class="lang-style" style="margin-top:-2px"><a href="/ja/">日本語</a></div>
+        <p style="color: rgb(255, 255, 255);">/</p>
+        <div class="lang-style"><a href="../de/">Deutsch</a> </div>
+        <p style="color: rgb(255, 255, 255);">/</p>
+        <div class="lang-style" style="margin-top:-2px"><a href="../ja/">日本語</a></div>
 
     </div>
-
     <main>
 
 
         <section>
             <h1>Ōkunoshima – Japan‘s Poison Factory</h1>
-            <p>In World War II, Japan produced an estimated amount of 9000 tons of chemical weapons in the poison gas
-                factory on Ōkunoshima. Today it‘s globally known as rabbit island: Around 700 free hopping rabbits
-                attract hundreds of thousands of tourists.</p>
-                <h3> The documentary „Ōkunoshima“ shows what‘s left of the poison gas – and that it‘s still </h3>
-            </section>
+            <p>
+                In World War II, Japan produced an estimated amount of 9000 tons of chemical weapons in the poison gas
+                factory on Ōkunoshima. Today it‘s globally known as Rabbit Island: Around 700 free hopping rabbits
+                attract hundreds of thousands of tourists.
+            </p>
+            <h3> The documentary “Ōkunoshima“ shows what‘s left of the poison gas – and that it‘s still dangerous.</h3>
+        </section>
         <section>
             <style>
                 .embed-container {
@@ -37,40 +38,46 @@
                     max-width: 100%;
                 }
 
-                .embed-container iframe,
-                .embed-container object,
-                .embed-container embed {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                }
+                    .embed-container iframe,
+                    .embed-container object,
+                    .embed-container embed {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                    }
             </style>
-            <div class='embed-container'><iframe src='https://player.vimeo.com/video/433970242' frameborder='0'
-                    webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+            <div class='embed-container'>
+                <iframe src='https://player.vimeo.com/video/433970242' frameborder='0'
+                        webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            </div>
         </section>
         <section>
             <div>
-                <h3>About the documentary „Ōkunoshima“</h3>
-                <p>The 30 minute documentary film was independently researched and produced between 2013 and 2019. It
+                <h3>About the documentary “Ōkunoshima“</h3>
+                <p>
+                    The 30 minute documentary film was independently researched and produced from 2013 to 2019. It
                     combined unpublished documents, interviews with victims & historical witnesses, as well as unseen
                     images from various archives from around the world. The documentary had its world premiere at the
-                    Hiroshima International Film Festival in 2019 and was nominated in the category “Investigative
-                    Medium” for the 2020 DIG Awards.</p>
+                    2019 Hiroshima International Film Festival and was nominated for “Investigative
+                    Medium” at the 2020 DIG Awards.
+                </p>
             </div>
 
             <div>
                 <h3>About the filmmaker Fritz Schumann</h3>
-                <p>I‘m a visual journalist working in Japan since 2009. In 2013, when I was living in Hiroshima, I
-                    started to research the history of Ōkunoshima beyond the rabbit island fame. I was shocked by the
-                    extent of the production and how unknown the poison gas history was even inside Japan. Besides a
+                <p>
+                    I‘m a visual journalist working in Japan since 2009. In 2013, when I was living in Hiroshima, I
+                    started to research the history of Ōkunoshima beyond its Rabbit Island fame. I was shocked by the
+                    extent of the poison gas production and how unknown this history was even within Japan. Besides a
                     research grant, this film was funded by myself. It was challenging to find sources and the research
-                    took me several years – and it will stick with me for a long time. Some of the people I talked to
-                    have already passed away, it was their last chance to tell me their story. I hope this documentary
-                    film can preserve their memories for the future.</p>
-                <p>Some of the people I talked to have already passed away, it was their last chance to tell me their
-                    story. I hope this documentary film can preserve their memories for the future.</p>
+                    took me several years – and what I experienced will stay with me for a long time.
+                </p>
+                <p>
+                    Some of the people I talked to have since passed away, having had their last chance to tell their story to me.
+                    I hope this documentary film can preserve their memories for the future.
+                </p>
             </div>
 
 
@@ -79,26 +86,34 @@
         <section>
             <div>
                 <h4>Credits</h4>
-                <p>Story, Research & Photography Fritz Schumann Music Mario Kaoru Mevy Animation Silan Bekjarov
-                    Interviews Masayuki Yamauchi / Susumu Sakuma / Bu Ping / Reiko Okada / Miyuki Aozuka Translation
+                <p>
+                    <strong>Story, Research & Photography</strong> Fritz Schumann <strong>Music</strong> Mario Kaoru Mevy <strong>Animation</strong> Silan Bekjarov
+                    <strong>Interviews</strong> Masayuki Yamauchi / Susumu Sakuma / Bu Ping / Reiko Okada / Miyuki Aozuka <strong>Translation</strong>
                     Yukina Gumbe Harris / Nikki Kininmoth / Tomoko Nishizaki / Noburo Kondo / Azusa Sumioka / Hidenori
-                    Suzuki Okada Diary Narration Kiyoka Sumida Additional Research Sophie Matsuo / Noburo Kondo / Tomoko
-                    Nishizaki Special Thanks Tomoko Nishizaki / Higuchi Kenji / Noburo Kondo / Noborito Museum Tokyo /
-                    Sophie Matsuo / Yuriko Williams / Justus Williams / Kei Nakamura / Daqing Yang / Kiyoka Sumida /
+                    Suzuki <strong>Okada Diary Narration</strong> Kiyoka Sumida <strong>Additional Research</strong> Sophie Matsuo / Noburo Kondo / Tomoko
+                    Nishizaki <strong>Special Thanks</strong> Tomoko Nishizaki / Higuchi Kenji / Noburo Kondo / Noborito Museum Tokyo /
+                    Sophie Matsuo / Yuriko Williams / Justus Williams / Kei Nakamura / Daqing Yang / Kiyoka Sumida / Masami Sumida / 
                     NIDS military archives / Ayano Kawaguchi / Frank Schumann / GEKA Munster / Hiroshima Film Commission
-                    / Mihoko Inagaki Additional Funding Robert Bosch Stiftung „Grenzgänger“ grant Copyright Fritz
-                    Schumann 2013 – 2019</p>
+                    / Mihoko Inagaki <strong>Additional Funding</strong> Robert Bosch Stiftung ”Grenzgänger” grant <strong>Copyright</strong> Fritz
+                    Schumann 2019
+                </p>
             </div>
         </section>
         <section>
             <p><a href="https://www.fotografritz.de/" target="_blank">More documentary films by Fritz Schumann</a></p>
             <p><a href="mailto:fritz@fotografritz.de">Contact</a>
-            <p>Imprint </p>
+            <p><a href="http://www.fotografritz.de/fritz/" target="_blank">Imprint</a></p>
 
         </section>
         <section>
             <p>If you liked the film and want to support the work:</p>
-            <p>Paypal Button </p>
+            <p>
+                <form action="https://www.paypal.com/donate" method="post" target="_top">
+                    <input type="hidden" name="hosted_button_id" value="JTXN3ANZCF73Y" />
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                    <img alt="" border="0" src="https://www.paypal.com/en_DE/i/scr/pixel.gif" width="1" height="1" />
+                </form>
+            </p>
         </section>
     </main>
 </body>
