--- a/ja/index.html
+++ b/ja/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+
+<!--Japanisch-->
+
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,11 +22,13 @@
 
 
         <section>
-            <h1>Ōkunoshima – Japan‘s Poison Factory</h1>
-            <p>In World War II, Japan produced an estimated amount of 9000 tons of chemical weapons in the poison gas
-                factory on Ōkunoshima. Today it‘s globally known as rabbit island: Around 700 free hopping rabbits
-                attract hundreds of thousands of tourists.</p>
-            <h3> The documentary „Ōkunoshima“ shows what‘s left of the poison gas – and that it‘s still </h3>
+            <h1>大久野島　ー　毒ガスとうさぎ</h1>
+            <p>
+                昭和初期に、日本は広島県の大久野島の毒ガス工場で推定9000トンの化学兵器を生産しました。
+                今日、世界的にうさぎの島として知られています。約700匹の自由にうさぎは、何十万人もの観光客を魅了しています。
+
+            </p>
+            <h3> 日本では毒ガスの残骸がまだ危険です。</h3>
         </section>
         <section>
             <style>
@@ -35,68 +40,81 @@
                     max-width: 100%;
                 }
 
-                .embed-container iframe,
-                .embed-container object,
-                .embed-container embed {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                }
+                    .embed-container iframe,
+                    .embed-container object,
+                    .embed-container embed {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                    }
             </style>
-            <div class='embed-container'><iframe src='https://player.vimeo.com/video/433970242' frameborder='0'
-                    webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
-        </section>
-        <section>
-            <div>
-                <h3>About the documentary „Ōkunoshima“</h3>
-                <p>The 30 minute documentary film was independently researched and produced between 2013 and 2019. It
-                    combined unpublished documents, interviews with victims & historical witnesses, as well as unseen
-                    images from various archives from around the world. The documentary had its world premiere at the
-                    Hiroshima International Film Festival in 2019 and was nominated in the category “Investigative
-                    Medium” for the 2020 DIG Awards.</p>
-            </div>
-
-            <div>
-                <h3>About the filmmaker Fritz Schumann</h3>
-                <p>I‘m a visual journalist working in Japan since 2009. In 2013, when I was living in Hiroshima, I
-                    started to research the history of Ōkunoshima beyond the rabbit island fame. I was shocked by the
-                    extent of the production and how unknown the poison gas history was even inside Japan. Besides a
-                    research grant, this film was funded by myself. It was challenging to find sources and the research
-                    took me several years – and it will stick with me for a long time. Some of the people I talked to
-                    have already passed away, it was their last chance to tell me their story. I hope this documentary
-                    film can preserve their memories for the future.</p>
-                <p>Some of the people I talked to have already passed away, it was their last chance to tell me their
-                    story. I hope this documentary film can preserve their memories for the future.</p>
-            </div>
-
-
-        </section>
-
-        <section>
-            <div>
-                <h4>Credits</h4>
-                <p>Story, Research & Photography Fritz Schumann Music Mario Kaoru Mevy Animation Silan Bekjarov
-                    Interviews Masayuki Yamauchi / Susumu Sakuma / Bu Ping / Reiko Okada / Miyuki Aozuka Translation
-                    Yukina Gumbe Harris / Nikki Kininmoth / Tomoko Nishizaki / Noburo Kondo / Azusa Sumioka / Hidenori
-                    Suzuki Okada Diary Narration Kiyoka Sumida Additional Research Sophie Matsuo / Noburo Kondo / Tomoko
-                    Nishizaki Special Thanks Tomoko Nishizaki / Higuchi Kenji / Noburo Kondo / Noborito Museum Tokyo /
-                    Sophie Matsuo / Yuriko Williams / Justus Williams / Kei Nakamura / Daqing Yang / Kiyoka Sumida /
-                    NIDS military archives / Ayano Kawaguchi / Frank Schumann / GEKA Munster / Hiroshima Film Commission
-                    / Mihoko Inagaki Additional Funding Robert Bosch Stiftung „Grenzgänger“ grant Copyright Fritz
-                    Schumann 2013 – 2019</p>
+            <div class='embed-container'>
+                <iframe src='https://vimeo.com/340621382' frameborder='0'
+                        webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
             </div>
         </section>
         <section>
-            <p><a href="https://www.fotografritz.de/" target="_blank">More documentary films by Fritz Schumann</a></p>
-            <p><a href="mailto:fritz@fotografritz.de">Contact</a>
-            <p>Imprint </p>
+            <div>
+                <h3>ドキュメンタリー「大久野島」</h3>
+                <p>
+                    30分間のドキュメンタリー映画は、2013年から2019年にかけて独自に制作されました。
+                    未公開の文書、被害者や歴史的目撃者のインタビュー、世界中の書庫からの画像を組み合わせました。
+                    このドキュメンタリーは、2019年の広島国際映画祭で世界初公開され、2020年のDIGアワードの「Investigative Medium」部門にノミネートされました。
+                </p>
+            </div>
+
+            <div>
+                <h3>
+                    映画監督フリッツ・シューマン
+                </h3>
+                <p>
+                    2009年から 私は日本について報告するジャーナリストです。2013年に広島に住んでいたとき、大久野島の歴史を研究し始めました。
+                    生産量の多さや、日本国内でも毒ガスの歴史が知られていないことびっくりしました。研究助成金に加えて、この映画は私自身によって資金提供されました。
+                    情報源を見つけるのは大変で、調査には数年かかりました。私にとって長い間続くでしょう。
+
+                </p>
+                <p>
+                    私が話をした人々の何人かはすでに亡くなりました、話をする最後のチャンスでした。
+                    このドキュメンタリー映画が記憶を将来のために保存してくれることを願っています。
+                </p>
+            </div>
+
+
+        </section>
+
+        <section>
+            <div>
+                <h4>制作スタッフ</h4>
+                <p>
+                    <strong>ストーリー・研究・撮影</strong> Schumann Fritz<strong>音楽</strong> Mevy Mario Kaoru<strong>アニメーション</strong> Silan Bekjarov
+                    <strong>インタビュ</strong> Yamauchi Masayuki / Sakuma Susumu / Bu Ping / Okada Reiko / Aozuka Miyuki <strong>翻訳</strong>
+                    Harris Gumbe Yukina / Kininmoth Nikki / Nishizaki Tomoko / Kondo Noburo / Sumioka Azusa /
+                    Suzuki Hidenori <strong>岡田日記読書</strong> Sumida Kiyoka <strong>追加研究</strong> Matsuo Sophie / Kondo Noburo /
+                    Nishizaki Tomoko <strong>感謝</strong> Nishizaki Tomoko / Higuchi Kenji / Kondo Noburo / 登戸研究所資料館 /
+                    Matsuo Sophie / Williams Yuriko / Williams Justus / Nakamura Kei / Daqing Yang / Sumida Kiyoka / Sumida Masami / 
+                    防衛研究所 / Kawaguchi Ayano / Schumann Frank / GEKA Munster / Hiroshima Film Commission
+                    / Inagaki Mihoko <strong>研究助成金</strong> Robert Bosch Stiftung ”Grenzgänger” <strong>Copyright</strong> Fritz
+                    Schumann 2019
+                </p>
+            </div>
+        </section>
+        <section>
+            <p><a href="https://www.fotografritz.de/" target="_blank">フリッツ・シューマンの他のドキュメンタリー映画</a></p>
+            <p><a href="mailto:fritz@fotografritz.de">メール</a>
+            <p><a href="http://www.fotografritz.de/fritz/" target="_blank">インプリント</a></p>
 
         </section>
         <section>
-            <p>If you liked the film and want to support the work:</p>
-            <p>Paypal Button </p>
+            <p>映画が好きでしたら、仕事をサポートしたいなら：</p>
+            <p>
+                <form action="https://www.paypal.com/donate" method="post" target="_top">
+                    <input type="hidden" name="hosted_button_id" value="JTXN3ANZCF73Y" />
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                    <img alt="" border="0" src="https://www.paypal.com/en_DE/i/scr/pixel.gif" width="1" height="1" />
+                </form>
+            </p>
         </section>
     </main>
 </body>
