--- a/de/index.html
+++ b/de/index.html
@@ -55,9 +55,7 @@
                     }
             </style>
             <div class='embed-container'>
-                <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/383357553?h=72081f8873&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-                <!-- <iframe src='https://vimeo.com/383357553' frameborder='0'
-                        webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> -->
+                <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/383357553?h=72081f8873&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;background-color: #000;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </div>
         </section>
         <section>
