--- a/ja/index.html
+++ b/ja/index.html
@@ -50,12 +50,7 @@
                         height: 100%;
                     }
             </style>
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/340621382?h=b3fd70a6de&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-            <!-- <div class='embed-container'>
-
-                <iframe src='https://vimeo.com/340621382' frameborder='0'
-                        webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div> -->
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/340621382?h=b3fd70a6de&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;background-color: #000;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         </section>
         <section>
             <div>
