--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
             <h1>Ōkunoshima – Japan‘s Poison Factory</h1>
             <p>
                 In World War II, Japan produced an estimated amount of 9000 tons of chemical weapons in the poison gas
-                factory on Ōkunoshima. Today it‘s globally known as Rabbit Island: Around 700 free hopping rabbits
+                factory on Ōkunoshima. <br>
+                Today it‘s globally known as Rabbit Island: Around 700 free hopping rabbits
                 attract hundreds of thousands of tourists.
             </p>
             <h3> The documentary “Ōkunoshima“ shows what‘s left of the poison gas – and that it‘s still dangerous.</h3>
         </section>
+        <p>
+        </p>
+        
         <section>
             <style>
                 .embed-container {
