--- a/index.html
+++ b/index.html
@@ -57,36 +57,41 @@
                         webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
             </div>
         </section>
+        <p>
+        </p>
         <section>
             <div>
                 <h3>About the documentary “Ōkunoshima“</h3>
                 <p>
-                    The 30 minute documentary film was independently researched and produced from 2013 to 2019. It
-                    combined unpublished documents, interviews with victims & historical witnesses, as well as unseen
-                    images from various archives from around the world. The documentary had its world premiere at the
-                    2019 Hiroshima International Film Festival and was nominated for “Investigative
+                    The 30 minute documentary film was independently researched and produced from 2013 to 2019. <br> 
+                    It combined unpublished documents, interviews with victims & historical witnesses, as well as unseen
+                    images from various archives from around the world. <br>
+                    The documentary had its world premiere at the 2019 Hiroshima International Film Festival and was nominated for “Investigative
                     Medium” at the 2020 DIG Awards.
                 </p>
             </div>
-
+<p>
+            </p>
             <div>
                 <h3>About the filmmaker Fritz Schumann</h3>
                 <p>
-                    I‘m a visual journalist working in Japan since 2009. In 2013, when I was living in Hiroshima, I
-                    started to research the history of Ōkunoshima beyond its Rabbit Island fame. I was shocked by the
-                    extent of the poison gas production and how unknown this history was even within Japan. Besides a
-                    research grant, this film was funded by myself. It was challenging to find sources and the research
-                    took me several years – and what I experienced will stay with me for a long time.
+                    I‘m a visual journalist working in Japan since 2009. In 2013, when I was living in Hiroshima,<br> 
+                    I started to research the history of Ōkunoshima beyond its Rabbit Island fame. I was shocked by the <br>
+                    extent of the poison gas production and how unknown this history was even within Japan. Besides a <br>
+                    research grant, this film was funded by myself. It was challenging to find sources and the research <br>
+                    took me several years – and what I experienced will stay with me for a long time.<br>
                 </p>
                 <p>
-                    Some of the people I talked to have since passed away, having had their last chance to tell their story to me.
-                    I hope this documentary film can preserve their memories for the future.
+                    Some of the people I talked to have since passed away, <br>
+                    having had their last chance to tell their story to me.<br>
+                    I hope this documentary film can preserve their memories for the future.<br>
                 </p>
             </div>
 
 
         </section>
-
+<p>
+        </p>
         <section>
             <div>
                 <h4>Credits</h4>
