--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                 <h3>About the documentary “Ōkunoshima“</h3>
                 <p>
                     The 30 minute documentary film was independently researched and produced from 2013 to 2019. <br> 
-                    It combined unpublished documents, interviews with victims & historical witnesses, as well as unseen
+                    It combined unpublished documents, interviews with victims & historical witnesses, <br> as well as unseen
                     images from various archives from around the world. <br>
-                    The documentary had its world premiere at the 2019 Hiroshima International Film Festival and was nominated for “Investigative
+                    The documentary had its world premiere at the 2019 Hiroshima International Film Festival <br>and was nominated for “Investigative
                     Medium” at the 2020 DIG Awards.
                 </p>
             </div>
