--- a/de/index.html
+++ b/de/index.html
@@ -25,8 +25,8 @@
         <section>
             <h1>Ōkunoshima – Japans Giftgasfabrik</h1>
             <p>
-                Im Zweiten Weltkrieg produzierte Japan auf der Insel Ōkunoshima schätzungsweise 9000 Tonnen
-                chemische Kampfstoffe. Heute ist sie weltweit als Haseninsel bekannt: Rund 700 freilaufende Kaninchen
+                Im Zweiten Weltkrieg produzierte Japan auf der Insel Ōkunoshima geschätzte 9000 Tonnen
+                chemische Kampfstoffe. <br>Heute ist sie weltweit als Haseninsel bekannt: Rund 700 freilaufende Kaninchen
                 locken Hunderttausende von Touristen an.
             </p>
             <h4>
@@ -34,6 +34,8 @@
                 – und dass es immer noch gefährlich ist.
             </h4>
         </section>
+        <p>
+        </p>
         <section>
             <style>
                 .embed-container {
@@ -58,38 +60,41 @@
                 <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/383357553?h=72081f8873&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;background-color: #000;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </div>
         </section>
+        <p>
+        </p>
         <section>
             <div>
                 <h3>Die Dokumentation "Ōkunoshima"</h3>
                 <p>
-                    Der 30-minütige Dokumentarfilm wurde zwischen 2013 und 2019 recherchiert
+                    Der 30-minütige Dokumentarfilm wurde zwischen 2013 und 2019 recherchiert<br>
                     und unabhängig produziert. Er kombiniert unveröffentlichte Dokumente,
-                    Interviews mit Opfern und Zeitzeugen, sowie ungesehene Bilder aus historischen Archiven.
-                    "Ōkunoshima" hatte seine Weltpremiere auf dem Hiroshima International Film Festival 2019
-                    und wurde in der Kategorie "Investigatives Medium" für die DIG Awards 2020 nominiert.
+                    Interviews mit Opfern und Zeitzeugen, <br>sowie ungesehene Bilder aus historischen Archiven.
+                    "Ōkunoshima" hatte seine Weltpremiere <br>auf dem Hiroshima International Film Festival 2019
+                    und wurde in der Kategorie "Investigatives Medium"<br> für die DIG Awards 2020 nominiert.
                 </p>
             </div>
 
             <div>
                 <h3>Der Filmemacher Fritz Schumann</h3>
                 <p>
-                    Ich beschäftige mich als Visual Journalist seit 2009 mit dem Land Japan.
-                    Als ich 2013 in Hiroshima lebte, begann ich, die Geschichte von Ōkunoshima zu recherchieren,
-                    jenseits der Berühmtheit als Kanincheninsel. Das Ausmaß der Giftgasproduktion schockierte mich –
-                    aber mehr noch überraschte mich die mangelnde Aufarbeitung und wie unbekannt dieses Kapitel in Japan war.
-                    Neben einem Recherchestipendium habe ich die Arbeit an dem Film komplett selbst finanziert.
-                    Es war nicht einfach, Quellen und GesprächspartnerInnen zu finden. Die Recherche dauerte mehrere Jahre
+                    Ich beschäftige mich als Visual Journalist seit 2009 mit dem Land Japan.<br>
+                    Als ich 2013 in Hiroshima lebte, begann ich, die Geschichte von Ōkunoshima zu recherchieren,<br>
+                    jenseits der Berühmtheit als Kanincheninsel. Das Ausmaß der Giftgasproduktion schockierte mich –<br>
+                    aber mehr noch überraschte mich die mangelnde Aufarbeitung und wie unbekannt dieses Kapitel in Japan war.<br>
+                    Neben einem Recherchestipendium habe ich die Arbeit an dem Film komplett selbst finanziert.<br>
+                    Es war nicht einfach, Quellen und GesprächspartnerInnen zu finden. Die Recherche dauerte mehrere Jahre<br>
                     – und sie wird mich noch lange begleiten.
                 </p>
                 <p>
-                    Einige der Menschen, mit denen ich gesprochen habe, sind bereits verstorben.
-                    Es war ihre letzte Chance, ihre Geschichte zu erzählen. Ich hoffe, dieser Dokumentarfilm kann ihre Erinnerungen für die Zukunft bewahren.
+                    Einige der Menschen, mit denen ich gesprochen habe, sind bereits verstorben.<br>
+                    Es war ihre letzte Chance, ihre Geschichte zu erzählen. <br>Ich hoffe, dieser Dokumentarfilm kann ihre Erinnerungen für die Zukunft bewahren.
                 </p>
             </div>
 
 
         </section>
-
+<p>
+    </p>
         <section>
             <div>
                 <h4>Credits</h4>
