--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 <!--English-->
-
+ <title> Ōkunoshima – Japan‘s Poison Factory </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Assistant:400,200,300,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="/css/styles.css">
