--- a/de/index.html
+++ b/de/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <!--Deutsch-->
-
+    <title>Ōkunoshima – Japans Giftgasfabrik</title>
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
