--- a/ja/index.html
+++ b/ja/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 
 <!--Japanisch-->
-
+<title>大久野島　ー　毒ガスとうさぎ</title>
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
