--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 <!--English-->
  <title> Ōkunoshima – Japan‘s Poison Factory </title>
