--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <!--English-->
  <title> Ōkunoshima – Japan‘s Poison Factory </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="In World War II, Japan produced an estimated amount of 9000 tons of chemical weapons in the poison gas factory on Ōkunoshima. Today it‘s globally known as Rabbit Island: Around 700 free hopping rabbits attract hundreds of thousands of tourists.">
+  <meta name="keywords" content="Japan, Poison Gas, Ōkunoshima">
+  <meta name="author" content="Fritz Schumann">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css?family=Assistant:400,200,300,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="/css/styles.css">
 
