--- a/de/index.html
+++ b/de/index.html
@@ -4,6 +4,9 @@
 <!--Deutsch-->
     <title>Ōkunoshima – Japans Giftgasfabrik</title>
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+ <meta name="description" content=" Im Zweiten Weltkrieg produzierte Japan auf der Insel Ōkunoshima geschätzte 9000 Tonnen chemische Kampfstoffe. Heute ist sie weltweit als Haseninsel bekannt: Rund 700 freilaufende Kaninchen locken Hunderttausende von Touristen an.">
+  <meta name="keywords" content="Japan, Giftgas, Ōkunoshima">
+  <meta name="author" content="Fritz Schumann">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Assistant:400,200,300,700" rel="stylesheet" type="text/css">
