--- a/ja/index.html
+++ b/ja/index.html
@@ -4,7 +4,9 @@
 <!--Japanisch-->
 <title>大久野島　ー　毒ガスとうさぎ</title>
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
-
+  <meta name="description" content="昭和初期に、日本は広島県の大久野島の毒ガス工場で推定9000トンの化学兵器を生産しました。今日、世界的にうさぎの島として知られています。約700匹の自由にうさぎは、何十万人もの観光客を魅了しています">
+  <meta name="keywords" content="大久野島, 日本, 毒ガス">
+  <meta name="author" content="Fritz Schumann">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Assistant:400,200,300,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="/css/styles.css">
